# bdi

./: .gitignore  docker-compose.yml
.claude/: settings.json
proto/: bdi.proto
services/api-gateway/: Dockerfile  grpc_clients.py  main.py  requirements.txt
services/embedding-service/: Dockerfile  requirements.txt  server.py
services/eval-runner/: Dockerfile  run_eval.py
services/llm-service/: Dockerfile  entrypoint.sh
services/nginx/: nginx.conf
services/rust-engine/: Cargo.toml  Dockerfile  build.rs
services/rust-engine/src/: consolidation.rs  main.rs
