[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
neo4rs = "0.7"

[build-dependencies]
tonic-build = "0.10"
